<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/anasayfaFragment"
        android:icon="@drawable/anasayfa_ikon"
        android:title="@string/anasayfa" />
    <item
        android:icon="@drawable/search_ikon"
        android:title="@string/search" />
    <item
        android:id="@+id/anasayfaFragment"
        android:icon="@drawable/logo_icon"
        android:title="@string/app"
        android:iconTint="@color/purple_700"
        />
    <item
        android:id="@+id/profilFragment"
        android:icon="@drawable/profil_ikon"
        android:title="@string/profil" />
    <item
        android:icon="@drawable/kampanya_ikon"
        android:title="@string/kampanya" />
</menu>